# llm-rag-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  env.example  main.py  preparation_system design interview.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/evaluation/: validation_set.json
data/processed/: README.md  docstore.json  index_store.json
data/raw/: README.md
data/raw/json/: A cybersecurity AI agent selection and decision support framework.json  ARLBench Flexible and Efficient Benchmarking for Hyperparameter Optimization in Reinforcement Learni.json  Causal-Paced Deep Reinforcement Learning.json  Foundations of GenIR.json  Learn to Accumulate Evidence from All Training Samples Theory and Practice.json  Systematic Evaluation of LLM-as-a-Judge in LLM Alignment Tasks Explainable Metrics and Diverse Promp.json
src/evaluation/: __init__.py  evaluate.py
src/processing/: gather.py  index.py  rag.py
src/processing/data/raw/json/: Deep Learning and Computational Physics Lecture Notes.json  Exploring Hierarchy-Aware Inverse Reinforcement Learning.json  FBI-LLM Scaling Up Fully Binarized LLMs from Scratch via Autoregressive Distillation.json  RETA-LLM A Retrieval-Augmented Large Language Model Toolkit.json  Safe Untrusted Proof-Carrying AI Agents toward the agentic lakehouse.json  The Modern Mathematics of Deep Learning.json
src/ui/: __init__.py  app.py  chat.py
